deployments/traefik/dashboard/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
      - websecure
    routes: 
      - match: Host(`traefik.service.sprint.luchtenberg.eu`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
        kind: Rule
        middlewares:
          - name: traefik-dashboard-basicauth
            namespace: traefik
        services:
          - name: api@internal
            kind: TraefikService
    tls:
      secretName: traefik-service-sprint-luchtenberg-eu-production-tls
